--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,15 +1,15 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success">New Recipe</button>
+    <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
   </div>
 </div>
 <hr>
 <div class="row">
   <div class="col.xs-12">
     <app-recipe-item
-      *ngFor="let recipeEL of recipes"
+      *ngFor="let recipeEL of recipes; let i = index"
       [recipe]="recipeEL"
-      (recipeSelected)="onRecipeSelected(recipeEL)"></app-recipe-item>
+      [index]="i"></app-recipe-item>
   </div>
 </div>
 
